--- a/index.html
+++ b/index.html
@@ -216,28 +216,25 @@ pml_write_files(submission)</code></pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] randomForest_4.6-12 rpart_4.1-10        rattle_4.0.5       
-## [4] lubridate_1.3.3     caret_6.0-52        ggplot2_1.0.1      
-## [7] lattice_0.20-31    
+## [1] randomForest_4.6-12 rattle_4.0.5        lubridate_1.3.3    
+## [4] caret_6.0-52        ggplot2_1.0.1       lattice_0.20-31    
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_0.12.0         RColorBrewer_1.1-2  compiler_3.2.1     
-##  [4] formatR_1.2.1       nloptr_1.0.4        plyr_1.8.3         
-##  [7] class_7.3-12        iterators_1.0.7     tools_3.2.1        
-## [10] digest_0.6.8        lme4_1.1-9          memoise_0.2.1      
-## [13] evaluate_0.8        nlme_3.1-120        gtable_0.1.2       
-## [16] mgcv_1.8-6          Matrix_1.2-1        foreach_1.4.2      
-## [19] yaml_2.1.13         parallel_3.2.1      brglm_0.5-9        
-## [22] SparseM_1.7         proto_0.3-10        e1071_1.6-7        
-## [25] RGtk2_2.20.31       BradleyTerry2_1.0-6 stringr_1.0.0      
-## [28] knitr_1.11          MatrixModels_0.4-1  gtools_3.5.0       
-## [31] stats4_3.2.1        grid_3.2.1          nnet_7.3-9         
-## [34] rmarkdown_0.8       minqa_1.2.4         reshape2_1.4.1     
-## [37] car_2.1-0           magrittr_1.5        scales_0.3.0       
-## [40] codetools_0.2-11    htmltools_0.2.6     MASS_7.3-40        
-## [43] splines_3.2.1       rpart.plot_1.5.3    pbkrtest_0.4-2     
-## [46] colorspace_1.2-6    quantreg_5.19       stringi_1.0-1      
-## [49] munsell_0.4.2</code></pre>
+##  [1] Rcpp_0.12.0         formatR_1.2.1       nloptr_1.0.4       
+##  [4] plyr_1.8.3          iterators_1.0.7     tools_3.2.1        
+##  [7] digest_0.6.8        lme4_1.1-9          memoise_0.2.1      
+## [10] evaluate_0.8        nlme_3.1-120        gtable_0.1.2       
+## [13] mgcv_1.8-6          Matrix_1.2-1        foreach_1.4.2      
+## [16] yaml_2.1.13         parallel_3.2.1      brglm_0.5-9        
+## [19] SparseM_1.7         proto_0.3-10        RGtk2_2.20.31      
+## [22] BradleyTerry2_1.0-6 stringr_1.0.0       knitr_1.11         
+## [25] MatrixModels_0.4-1  gtools_3.5.0        stats4_3.2.1       
+## [28] grid_3.2.1          nnet_7.3-9          rmarkdown_0.8      
+## [31] minqa_1.2.4         reshape2_1.4.1      car_2.1-0          
+## [34] magrittr_1.5        scales_0.3.0        codetools_0.2-11   
+## [37] htmltools_0.2.6     MASS_7.3-40         splines_3.2.1      
+## [40] pbkrtest_0.4-2      colorspace_1.2-6    quantreg_5.19      
+## [43] stringi_1.0-1       munsell_0.4.2</code></pre>
 </div>
 
 
